--- a/css/styles.css
+++ b/css/styles.css
@@ -474,42 +474,54 @@ body{
 
 /* sekcja piąta */
 
+.section-team-header{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 72px;
+    color: #2e2f42;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11em;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+    text-align: center;
+}
+
 .section-customers {
     padding: 96px 0 96px;
 }
 
-.menu-item-cutomers{
+.menu-item-customer{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     column-gap: 24px;
     row-gap: 72px;
-    list-style: none;
-    justify-content: center;
-    flex-basis: calc((100% - 32px) / 2);
+    padding-bottom: 96px;
 }
 
 .customers{
-    height: 88px;
     width: 168px;
+    height: 88px;
 }
 
 .customers-box{
     width: 100%;
     height: 100%;
-    border: 1px solid var(--subtle-text);
     border-radius: 4px;
+    border: 1px solid #8e8f99;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--subtle-text);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--main-border-color);
+    transition: color 250ms var(--transition-variable), 
+    border-color 250ms var(--transition-variable);
 }
   
 .customers-box:hover,
 .customers-box:focus {
-    border-color: var(--pressed-state);
-    color: var(--pressed-state);
+    border-color: #404bbf;
+    color: #404bbf;
 }
 
 .customers-icon {
