--- a/css/styles.css
+++ b/css/styles.css
@@ -408,6 +408,7 @@ body{
       0px 1px 1px 0px rgba(46, 47, 66, 0.16),
       0px 1px 6px 0px rgba(46, 47, 66, 0.08);
       margin-bottom: 24px;
+      background-color: #FFFFFF;
 }
   
 .team-container{
