--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ body{
 /* header */
 
 .page-header{
-    border-bottom: 1px solid var(--background-color-2);
+    border-bottom: 1px solid #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16), 
     0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -288,6 +288,37 @@ body{
   }
 
 /* sekcja pierwsza */
+
+.title-background {
+    background: #2e2f42;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/background-mobile.jpg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding-top: 112px;
+    padding-bottom: 112px;
+    width: 100%;
+    height: 432px;
+    margin: 0 auto;
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .title-background {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/background-mobile@x2.jpg);
+    }
+  }
 
 .title-background{
     display: flex;
@@ -1160,7 +1191,7 @@ margin-left: 95px;
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/background.jpg);
+      url(../images/background-tablet.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
@@ -1176,12 +1207,12 @@ margin-left: 95px;
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    .section-headline-background {
+    .title-background{
       background-image: linear-gradient(
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
         ),
-        url(../images/background@x2.jpg);
+        url(../images/background-tablet@x2.jpg);
     }
   }
 
@@ -1692,7 +1723,7 @@ margin-left: 95px;
 (-webkit-min-device-pixel-ratio: 2),
 (min-resolution: 192dpi),
 (min-resolution: 2dppx) {
-.section-headline-background {
+.title-background{
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -1988,7 +2019,6 @@ margin-left: 95px;
 .container-footer{
     display: flex;
     align-items: baseline;
-    margin-left: 156px;
     flex-direction: row;
 }
 
