--- a/css/styles.css
+++ b/css/styles.css
@@ -1475,6 +1475,7 @@ fill: #fff;
     border: none;
     border-radius: 4px;
     background-color: #4d5ae5;
+    fill: #fff;
 }
 
 .subscribe-footer{
